kubernetes/category/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: category-service
  name: category-service
spec:
  selector:
    app: category-service
  ports:
  - port: 3000
    targetPort: 3000
  type: NodePort
